--- a/css/style.css
+++ b/css/style.css
@@ -636,7 +636,7 @@ footer {
    Venue section              
 -----------------------------------------*/
 #venue {
-    background: url('../images/elk.jpg') #AEAEAE 80% repeat-y fixed; 
+    background: url('../images/elk.png') #AEAEAE 80% repeat-y fixed; 
 	background-blend-mode:overlay;
     background-size: cover;
     background-position: center center;
